<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hj.vediofun.ModifyActivity"
    >

    <LinearLayout
        style="@style/child_view_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/vedio_item"
            android:text="@string/name1" />

        <EditText
            android:id="@+id/name1"
            style="@style/input_style">
        </EditText>
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/name2"
            />
        <EditText
            android:id="@+id/name2"
            style="@style/input_style"/>
    </LinearLayout>
	
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/refresh"
            />
        <Switch
            android:id="@+id/refresh"
            style="@style/input_style"
            android:textOn="@string/auto_switch_on"
            android:textOff="@string/auto_switch_off"/>
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/end"
            />
        <Switch
            android:id="@+id/end"
            style="@style/input_style"
            android:textOn="@string/end_switch_on"
            android:textOff="@string/end_switch_off"/>
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip">
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
	        <TextView
	            style="@style/vedio_item"
	            android:text="@string/season"
	            android:layout_marginBottom="10dip"
	            />
	        <NumberPicker
	            android:id="@+id/season"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
	        <TextView
	            style="@style/vedio_item"
	            android:text="@string/episode"
	            android:layout_marginBottom="10dip"
	            />
	        <NumberPicker
	            android:id="@+id/episode"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
	        <TextView
	            style="@style/vedio_item"
	            android:text="@string/freq"
	            android:layout_marginBottom="10dip"
	            />
	        <NumberPicker
	            android:id="@+id/freq"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line"
        android:orientation="vertical"
        android:layout_width="wrap_content">
        <TextView
            style="@style/vedio_item"
            android:text="@string/nextdate"
            />
        <DatePicker
            android:id="@+id/nextdate"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:calendarViewShown="false"/>
    </LinearLayout>
    <LinearLayout
        style="@style/child_view_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            style="@style/vedio_item"
            android:text="@string/detail" />

        <EditText
            android:id="@+id/detail"
            android:layout_height="100dip"
            android:layout_width="150dip"
            android:inputType="textMultiLine">
        </EditText>
    </LinearLayout>
    
    <Button
        android:id="@+id/save"
        android:text="@string/modifybtn"
        style="@style/btn_style"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dip"
        />
</LinearLayout>
</ScrollView>