<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dip"
    android:orientation="vertical" >
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/name1"
            />
        <TextView
            android:id="@+id/name1"
          	style="@style/expressstyle"
            />
    </LinearLayout>
	
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/name2"
            />
        <TextView
            android:id="@+id/name2"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:text="@string/season"
            />
        <TextView
            android:id="@+id/season"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    <LinearLayout
       style="@style/child_view_line">
        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:text="@string/episode"
            />
        <TextView
            android:id="@+id/episode"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:text="@string/nextdate"
            />
        <TextView
            android:id="@+id/nextdate"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/child_view_line">
        <Button 
            style="@style/btn_style"
	        android:id="@+id/checkedbtn"
	        android:text="@string/checkedbtn"
        />
        <Button
            style="@style/btn_style"
	        android:id="@+id/pausedbtn"
	        android:text="@string/pausedbtn"
        />
        <Button
            style="@style/btn_style"
	        android:id="@+id/endedbtn"
	        android:text="@string/endedbtn"
        />
    </LinearLayout>
</LinearLayout>
