<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dip"
    android:orientation="vertical" >
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/name1"
            />
        <TextView
            android:id="@+id/name1"
          	style="@style/expressstyle"
            />
    </LinearLayout>
	
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/name2"
            />
        <TextView
            android:id="@+id/name2"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/season"
            />
        <TextView
            android:id="@+id/season"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    <LinearLayout
       style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/episode"
            />
        <TextView
            android:id="@+id/episode"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/nextdate"
            />
        <TextView
            android:id="@+id/nextdate"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/status"
            />
        <TextView
            android:id="@+id/status"
          	style="@style/expressstyle"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/child_view_line">
        <TextView
            style="@style/vedio_item"
            android:text="@string/detail"
            />
        <TextView
            android:id="@+id/detail"
          	style="@style/expressstyle"
          	android:layout_height="100dip"
          	android:singleLine="false"
          	android:ellipsize="end"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/child_view_line">
        <Button 
	        android:id="@+id/modifybtn"
	        style="@style/btn_style"
	        android:text="@string/modifybtn"
        />
    </LinearLayout>
</LinearLayout>
